# c2pa-text-binding

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  ROBUSTNESS.md  SECURITY.md  TRANSPORT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: robustness_bench.rs  threshold_sweep.rs  transport_survivability.rs
harness/: interop.py  requirements.txt  tier1.py
src/: crosscheck.rs  error.rs  fingerprint.rs  lib.rs  manifest.rs  minhash.rs  normalize.rs  python.rs  simhash.rs  soft_binding.rs  stego.rs  structure.rs  tag.rs  vs.rs  wasm.rs  zwbin.rs
test/: roundtrip.mjs
tests/: c2pa_roundtrip.rs  fail_safety.rs  false_positive.rs  interop.rs  jumbf_payload.rs
vectors/: a8-variation-selector.json
